syntax = "proto3";

package creator.applications.abstractions;

option go_package = "github.com/alexeysamorodov/creator-applications/grpc";

service ApplicationsService {
  rpc CreateApplication (CreateApplicationRequest) returns (CreateApplicationResponse);

  rpc Search (SearchRequest) returns (SearchResponse);
}

message CreateApplicationRequest {
  int64 request_id = 1;
  string tax_id = 2;
}

message CreateApplicationResponse {
  string application_id = 1;
}

message SearchRequest {
  repeated string application_ids = 1;
}

message SearchResponse {
  repeated SearchResponseApplication applications = 1;
}

message SearchResponseApplication {
  string id = 1;
  int64 request_id = 2;
  string tax_id = 3;
}
